@@ -39,7 +39,7 @@ var col_background="#ffffff";
 			<div id="navconmeasure"></div>
 		</div>
 		<div id="content" class="background">
-			<h2 id="website-slogan" class="secondary">Overview</h2>
+			<h2 id="website-slogan" class="secondary">Related Documents</h2>
 			<div id="sloganmeasure" class="clearer"></div>
 			<table id="content-table">
         	 	<tr>
@@ -52,56 +52,91 @@ var col_background="#ffffff";
 <table border="0" name="" width="100%" cellpadding="5" cellspacing="0">
 <tr align="" valign="">
 <td colspan="1" rowspan="1" width="100%" align="" valign="top">
-  <p>FURM consists of 4 fundamental guidelines:
-    <ol type="1">
-      <li>Standardize interfaces to multi-paradigm, multi-mode, and
-        cross-trophic models, </li>
-      <li>use discrete interactions, </li>
-      <li>design for an extended life cycle, and </li>
-      <li>define observables that will submit to a similarity measure</li>
-    </ol>
-  </p>
 
-  <p>These four fundamental guidelines flow down into the following more concrete behaviors (principles) that constitute the modeling of functional units.</p>
 
-  <ul>
-    <li><h3>Iterative Modeling</h3>
-      <p>Every model should be under continual evolution.  There is no optimal (finished) model.</p>
-    </li>
 
-    <li><h3>Model Comparison/Contrast</h3>
-      <p>Isolated models are nonsense.  They only make sense in relation, comparison, and contrast to other models.</p>
-    </li>
 
-    <li><h3>V&V</h3>
-      <p>Every component of a model should be open to validation (data permitting) based on clearly defined measures.  Verification should be limited to the examination of networks of validatable components.</p>
-    </li>
 
-    <li><h3>Aspect-Oriented Modeling</h3>
-      <p>Models must be capable of representing multiple, possiblyincommensurate,perspectives.</p>
-    </li>
 
-    <li><h3>Arbitrary Functional Granularity</h3>
-      <p>The composition of any system can be dynamic or open to interpretation.  Hence fixed compositional attributes (like hierarchy) are always weak points in any given model. If a model preserves the ability to re-specify or re-interpret its functional granularity, these weak points are hardened.</p>
-    </li>
+<ol>
 
-    <li><h3>Experimental Procedure Encapsulation</h3>
-      <p>Capture experimental procedures in an unambiguous way so that different experiments give similarly formatted results and are easily repeatable, preferably automatically repeatable and extensible.</p>
-    </li>
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.jtbi.2010.06.011" target="_blank">DOI</a>&gt;Computational experiments reveal plausible mechanisms for changing patterns of hepatic zonation of xenobiotic clearance and hepatotoxicity.&nbsp S. Sheikh-Bahaei, J.J. Maherb, and C.A. Hunt.&nbsp <em>Journal of Theoretical Biology</em>, published online: 10 June 2010</li>
 
-    <li><h3>Multiple Models</h3>
-      <p>Always run multiple models, in tandem, of the same referent.</p>
-    </li>
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/jpet.110.168526" target="_blank">DOI</a>&gt;Tracing Multiscale Mechanisms of Drug Disposition in Normal and Diseased Livers.&nbsp S. Park, S.H. Kim, G.E. Ropella, M.S. Roberts, C.A. Hunt.&nbsp <I>J Pharmacol Exp Ther</I>, published online: April 20, 2010</li>
 
-    <li><h3>Automated Model Generation</h3>
-      <p>Build mechanisms to automate (or at least assist in) the generation of new models.</p>
-    </li>
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1371/journal.pcbi.1000681" target="_blank">DOI</a>&gt;Identifying the rules of engagement enabling leukocyte rolling, activation, and adhesion.&nbsp J. Tang, C.A. Hunt.&nbsp <I>PLoS Comput Biol</I> 6(2):e1000681 (2010).</li>
 
-    <li><h3>Experimental Computing</h3>
-      <p>Treat any computational process as if it were a black box with an impenetrable boundary around it.</p>
-    </li>
-  </ul>
-          
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1098/rsif.2010.0041" target="_blank">DOI</a>&gt;Simulation of lung alveolar epithelial wound healing <I>in vitro</I>.&nbsp S.H.J. Kim, M.A. Matthay, K. Mostov, C.A. Hunt.&nbsp <I>J R Soc Interface</I>, published: March 17, 2010.
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/jpet.109.160739" target="_blank">DOI</a>&gt;Mechanistic insight from in silico pharmacokinetic experiments: roles of P-glycoprotein, Cyp3A4 enzymes, and microenvironments.&nbsp T.N. Lam, C.A. Hunt.&nbsp <I>J Pharmacol Exp Ther</I> 332(2):398-412 (2010).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1186/1752-0509-3-122" target="_blank">DOI</a>&gt;A Computational Approach to Resolve Cell Level Contributions to Early Glandular Epithelial Cancer Progression.&nbsp S.H.J. Kim, J. Debnath, K. Mostov, S. Park, C.A. Hunt.&nbsp <I>BMC Systems Biology</I> 3(1):122 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://www.ncbi.nlm.nih.gov/pubmed/19756975" target="_blank">PubMed</a>&gt;At the Biological Modeling and Simulation Frontier.&nbsp C.A. Hunt, G.E. Ropella, T.N. Lam, J. Tang, S.H. Kim, J.A. Engelberg, S. Sheikh-Bahaei.&nbsp <I>Pharm Res</I> 26(11): 2369-2400 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1186/1742-4682-6-8" target="_blank">DOI</a>&gt;Computational Investigation of Epithelial Cell Dynamic Phenotype In Vitro.&nbsp S.H.J. Kim, S. Park, K. Mostov, J. Debnath, and C.A. Hunt.&nbsp <I>Theoretical Biology and Medical Modelling</I>. 6:8 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://www.ijics.org/" target="_blank">IJICS</a>&gt;Understanding the Role of Liver Zonation in Toxin Elimination.&nbsp S. Sheikh-Bahaei, S.H.J. Kim, S. Sheikhbahaei, and C.A. Hunt.&nbsp <I>The International Journal of Intelligent Controls and Systems</I> 14(1): 33-40 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://www.ijics.org/" target="_blank">IJICS</a>&gt;Multi-Agent Simulation of Self-Organizing Behaviors of Alveolar Cells In Vitro.&nbsp S.H.J. Kim, S. Sheikh-Bahaei, and C.A. Hunt.&nbsp <I>The International Journal of Intelligent Controls and Systems</I> 14(1): 41-50 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1371/journal.pone.0004819" target="_blank">DOI</a>&gt;A Computational Approach to Understand In Vitro Alveolar Morphogenesis.&nbsp S.H.J. Kim, W. Yu, K. Mostov, M.A. Matthay, and C.A. Hunt.&nbsp <I>PLoS ONE</I> 4(3): e4819 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1186/1752-0509-2-110" target="_blank">DOI</a>&gt;Essential operating principles for tumor spheroid growth.&nbsp J.A. Engelberg, G.E. Ropella, and C.A. Hunt.&nbsp <I>BMC Syst Biol</I> 2:110 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/dmd.108.023820" target="_blank">DOI</a>&gt;Discovering plausible mechanistic details of hepatic drug interactions.&nbsp T.N. Lam and C.A. Hunt.&nbsp <I>Drug Metab Dispos</I> 37(1):237-246 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/jpet.108.142497" target="_blank">DOI</a>&gt;Computational strategies unravel and trace how liver disease changes hepatic drug disposition.&nbsp S. Park, G.E. Ropella, S.H. Kim, M.S. Roberts, and C.A. Hunt.&nbsp <I>J Pharmacol Exp Therap</I> 328(1):294-305 (2009).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1002/cplx.20253" target="_blank">DOI</a>&gt;Evaluating an Hepatic Enzyme Induction Mechanism through Coarse- and Fine-Grained Measurements of an In Silico Liver.&nbsp G.E. Ropella, S. Park, and C.A. Hunt.&nbsp <I>Complexity</I>. 14(6):28-34 (2008).</li>
+
+<li>&lt;<a class="reference" href="http://www.nature.com/nbt/journal/v26/n7/full/nbt0708-737.html" target="_blank">Nature</a>&gt;Dichotomies Between Computational and Mathematical Models.&nbsp C.A. Hunt, G.E. Ropella, S. Park, and J. Engelberg.&nbsp <I>Nat Biotechnol</I> 26:737-8 (2008).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/dmd.107.020164" target="_blank">DOI</a>&gt;In Silico Methods for Unraveling the Mechanistic Complexities of Intestinal Absorption: MetabolismEfflux Transport Interactions.&nbsp Lana X. Garmire and C.A. Hunt.&nbsp <I>Drug Metab Dispos</I> 36: 1414-24 (2008).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1124/dmd.107.019067" target="_blank">DOI</a>&gt;Predictions of Hepatic Disposition Properties Using a Mechanistically Realistic, Physiologically Based Model.&nbsp L. Yan, S. Sheihk-Bahaei, S. Park, G.E. Ropella, and C.A. Hunt.&nbsp <I>Drug Metab Dispos</I> 36(4): 759-768 (2008). (Featured Article).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1007/s11095-007-9494-y" target="_blank">DOI</a>&gt;Modeling and Simulation of Hepatic Drug Disposition Using a Physiologically Based, Multi-agent In Silico Liver.&nbsp L. Yan, G.E. Ropella, S. Park, M.S. Roberts, and C.A. Hunt.&nbsp <I>Pharm Res</I> 25: 1023-36 (2008).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.jconrel.2007.09.007" target="_blank">DOI</a>&gt;Synthetic Nano-LDL with Paclitaxel Oleate as a Targeted Drug Delivery Vehicle for Glioblastoma Multiforme.&nbsp M. Nikanjam, A.R. Gibbs, C.A. Hunt, T.F. Budinger, and T.M. Forte.&nbsp <I>J Cont Release</I> 24: 163-71 (2007).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1007/s11095-007-9391-4" target="_blank">DOI</a>&gt;An In Silico Transwell Device for the Study of Drug Transport and Drug-Drug Interactions.&nbsp L.X. Garmire, D.G. Garmire, and C.A. Hunt.&nbsp <I>Pharm Res</I> 24: 2171-86 (2007) (Featured Article).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.jcrc.2006.12.011" target="_blank">DOI</a>&gt;Challenges and rewards on the road to translational systems biology in acute illness: four case reports from interdisciplinary teams.&nbsp G. An, C.A. Hunt, G. Clermont, E. Neugebauer, and Y Vodovotz.&nbsp <I>J Crit Care</I> 22:169-75 (2007).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1186/1752-0509-1-14" target="_blank">DOI</a>&gt;Dynamics of in Silico Leukocyte Rolling, Activation, and Adhesion.&nbsp J. Tang, K.F. Ley, and C.A. Hunt.&nbsp <I>BMC Systems Biology</I> 1: 14 (2007).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1091/mbc.E06-11-1052" target="_blank">DOI</a>&gt;Formation of cysts by alveolar type II cells in three-dimensional culture reveals a novel mechanism for epithelial morphogenesis.&nbsp W. Yu, X. Fang, A. Ewald, K. Wong, C.A. Hunt, Z. Werb, M.A. Matthay, and K. Mostov.&nbsp <I>Mol Biol Cell</I> 18(5): 1693-700 (2007).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1177/0037549706075479" target="_blank">DOI</a>&gt;Cost-Based Partitioning For Distributed and Parallel Simulation of Decomposable Multiscale Constructive Models.&nbsp S. Park, C.A. Hunt, and B.P. Zeigler.&nbsp <I>Simulation</I> 82(12): 809-26 (2006).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1007/s10928-006-9031-3" target="_blank">DOI</a>&gt;Physiologically Based Synthetic Models of Hepatic Disposition.&nbsp C.A. Hunt, G.E. Ropella, L. Yan, D.Y. Hung, and M.S. Roberts.&nbsp <I>J Pharmacokin Pharmacodyn</I> 33(6): 737-72 (2006). <a href="http://biosystems.ucsf.edu/publications/Hunt_JPKPD_v33p737_2006.pdf" target="_blank"><IMG src="images/pdf_icon.gif" alt="Hunt_JPKPD_v33p737_2006.pdf" style="BORDER-RIGHT: 0px; BORDER-TOP: 0px; VERTICAL-ALIGN: middle; BORDER-LEFT: 0px; BORDER-BOTTOM: 0px" /> (author copy)</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1371/journal.pcbi.0020129" target="_blank">DOI</a>&gt;Simulating Properties of In Vitro Epithelial Cell Morphogenesis.&nbsp M.R. Grant, K.E. Mostov, T.D. Tlsty, and C.A. Hunt.&nbsp <I>PLoS Computational Biology</I> 2(10): e129, 1193-1209 (2006).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1007/11885191_20" target="_blank">DOI</a>&gt;An In Silico Analogue of In Vitro Systems Used to Study Epithelial Cell Morphogenesis.&nbsp M.R. Grant and C.A. Hunt.&nbsp In: <I>C. Priami (Ed.): CMSB 2006, LNCS</I> 4210: 285-97 (2006).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1007/s11095-006-9505-4" target="_blank">DOI</a>&gt;Mechanistic study of the interplay of intestinal transport and metabolism using the synthetic modeling method.&nbsp Y. Liu and C. A. Hunt.&nbsp <I>Pharm Res</I> 23(3): 493-505 (2006). <a href="http://biosystems.ucsf.edu/publications/Liu_PharmRes_v23p493_2006.pdf" target="_blank"><IMG src="images/pdf_icon.gif" alt="Liu_PharmRes_v23p493_2006.pdf" style="BORDER-RIGHT: 0px; BORDER-TOP: 0px; VERTICAL-ALIGN: middle; BORDER-LEFT: 0px; BORDER-BOTTOM: 0px" /> (author copy)</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.biosystems.2005.06.008" target="_blank">DOI</a>&gt;Studies of Intestinal Drug Transport Using an In Silico Epithelio-Mimetic Device.&nbsp Y. Liu and C.A. Hunt.&nbsp <I>Biosystems</I> 82(2): 154-167 (2005). <a href="http://biosystems.ucsf.edu/publications/Liu_Biosystems_v82p154_2005.pdf" target="_blank"><IMG src="images/pdf_icon.gif" alt="Liu_Biosystems_v82p154_2005.pdf" style="BORDER-RIGHT: 0px; BORDER-TOP: 0px; VERTICAL-ALIGN: middle; BORDER-LEFT: 0px; BORDER-BOTTOM: 0px" /> (author copy)</li>
+
+<li>&lt;<a class="reference" href="http://www.springerlink.com/content/tqbqkf0124jg4hmk/" target="_blank">DOI</a>&gt;Biomimetic in silico devices.&nbsp C.A. Hunt, G.E. Ropella, M.S. Roberts, L. Yan.&nbsp In: <I>V. Danos and V. Schachter (Eds.): CMBS 2004, LNCS</I> 3082: 35-43 (2005).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.brainresrev.2005.03.002" target="_blank">DOI</a>&gt;Glucose transport to the brain: A systems model.&nbsp A.A. Qutub and C.A. Hunt.&nbsp <I>Brain Research Rev</I> 49(3): 595-617 (2005).</li>
+
+<li>&lt;<a class="reference" href="http://dx.doi.org/10.1016/j.jocn.2003.05.008" target="_blank">DOI</a>&gt;Plasticity of gene expression in injured human dorsal root ganglia revealed by GeneChip oligonucleotide microarrays.&nbsp D. Rabert, Y. Xiao, Y. Yiangou, D. Kreder, L. Sangameswaran, M.R. Segal, C.A. Hunt, R. Birch, P. Anand. &nbsp <I>J Clin Neurosci</I> 11(3): 289-99 (2004).</li>
+
+</ol>
+
+
+
+
+
+
+
+
+
+
 </td>
 </tr>
 </table>
