@@ -104,7 +104,7 @@ var col_background="#ffffff";
         across many scales and aspects, it is not clear which of those
         networks are essential players in the toxicity cascade and
         which are mere correlations.  This project is a collaborative
-        effort between the <a href="http://biosystems.ucsf.edu">BioSystems Group</a> at UCSF, <a href="http://www.surgery.usc.edu/divisions/hep/cv-kaplowitzneil.html">Neil
+        effort between the <a href="http://biosystems.ucsf.edu">BioSystems Group</a> at UCSF, <a href="http://pressroom.usc.edu/neil-kaplowitz/">Neil
         Kaplowitz</a>, and <a href="http://pibbs.usc.edu/faculty/profile/?fid=198">Laurie
         DeLeve</a> both at USC to build falsifiable mechanistic alternative
         models to help decouple the correlations from the causal
